# liveEEG

./: CMakeLists.txt  README.txt  eeg_receiver.cpp  fft.h  gHIampDemo.cpp  gnuplot.cpp  gnuplot.h  main.cpp  readdata.m
